renamed SourceNoteBook -> SourceNotebook, the same as in the IDE window list, to workaround a bug in TComponent.ValidateRename
 SVN 9293@trunk

--- a/ide/uniteditor.lfm
+++ b/ide/uniteditor.lfm
@@ -1,15 +1,15 @@
-object SourceNoteBook: TSourceNoteBook
-  Caption = 'SourceNoteBook'
-  ClientHeight = 300
-  ClientWidth = 400
-  PixelsPerInch = 96
-  HorzScrollBar.Page = 399
-  VertScrollBar.Page = 299
+object SourceNotebook: TSourceNotebook
   Left = 533
   Height = 300
   Top = 374
   Width = 400
+  HorzScrollBar.Page = 399
+  VertScrollBar.Page = 299
+  Caption = 'SourceNotebook'
   object StatusBar: TStatusBar
+    Height = 23
+    Top = 277
+    Width = 400
     Panels = <    
       item
         Width = 100
@@ -26,8 +26,5 @@ object SourceNoteBook: TSourceNoteBook
       end>
     SimpleText = 'This is a test'
     SimplePanel = False
-    Height = 23
-    Top = 277
-    Width = 400
   end
 end
