IDE now checks, if all files of the package exists
 SVN 9309@trunk

--- a/ide/codecontextform.lfm
+++ b/ide/codecontextform.lfm
@@ -4,8 +4,10 @@ object CodeContextFrm: TCodeContextFrm
   Caption = 'CodeContextFrm'
   ClientHeight = 300
   ClientWidth = 400
+  KeyPreview = True
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  OnKeyDown = FormKeyDown
   OnPaint = FormPaint
   PixelsPerInch = 112
   HorzScrollBar.Page = 399
