--- a/ide/encloseselectiondlg.lfm
+++ b/ide/encloseselectiondlg.lfm
@@ -1,42 +1,14 @@
 object EncloseSelectionDialog: TEncloseSelectionDialog
-  Left = 406
+  Left = 319
   Height = 244
-  Top = 308
+  Top = 231
   Width = 427
   HorzScrollBar.Page = 426
   VertScrollBar.Page = 243
-  ActiveControl = OkButton
   Caption = 'Enclose Selection'
-  ClientHeight = 244
-  ClientWidth = 427
   OnCreate = EncloseSelectionDialogCREATE
   OnResize = EncloseSelectionDialogResize
-  PixelsPerInch = 96
   Position = poScreenCenter
-  object OkButton: TButton
-    Left = 88
-    Height = 25
-    Top = 208
-    Width = 107
-    Anchors = [akLeft, akBottom]
-    
-    Caption = 'Ok'
-    Default = True
-    ModalResult = 1
-    TabOrder = 1
-  end
-  object CancelButton: TButton
-    Left = 224
-    Height = 25
-    Top = 208
-    Width = 104
-    Anchors = [akLeft, akBottom]
-    
-    Cancel = True
-    Caption = 'Cancel'
-    ModalResult = 2
-    TabOrder = 2
-  end
   object TypeRadiogroup: TRadioGroup
     Left = 8
     Height = 189
@@ -54,5 +26,29 @@ object EncloseSelectionDialog: TEncloseSelectionDialog
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     TabOrder = 0
+  end
+  object btnOk: TButton
+    Left = 88
+    Height = 25
+    Top = 208
+    Width = 107
+    Anchors = [akLeft, akBottom]
+    BorderSpacing.InnerBorder = 2
+    Caption = 'Ok'
+    Default = True
+    ModalResult = 1
+    TabOrder = 1
+  end
+  object btnCancel: TButton
+    Left = 224
+    Height = 25
+    Top = 208
+    Width = 104
+    Anchors = [akLeft, akBottom]
+    BorderSpacing.InnerBorder = 2
+    Cancel = True
+    Caption = 'Cancel'
+    ModalResult = 2
+    TabOrder = 2
   end
 end
